# twenty-four

./: .gitignore  CMakeLists.txt  README.md  index.html  index.js  index.wasm  manifest.webmanifest  solutions.txt  sw.js
.github/workflows/: deploy.yml
assets/: icon.icns
cmake/: EmbedFile.cmake  app.rc.in
src/: anim.hpp  audio.cpp  audio.hpp  game.cpp  game.hpp  main.cpp  puzzles.h  rational.hpp  render.cpp  render.hpp  stb_image_impl.cpp  stb_impl.cpp  storage.cpp  storage.hpp
tools/: make_app_icons.sh  make_ico.py  make_icons.py  test_game.cpp  verify_solutions.py
web/: shell.html  sw.js
